# identifier_characteristics_paper

./: .env.example  .gitignore  .gitmodules  README.md  bar.py  conv.py  delete.sh  foo.py  large_.csv  leave_a_leaf.py  main.py  medium_.csv  metric_values.csv  notes.txt  paper.md  pick_random.py  plot.sh  pyproject.toml  small_.csv
db/: engine.py  models.py  utils.py
docker/: docker-compose.yml
download/: download.py
examples/: clojure.clj
nlp/fasttext/: benchmark.py  train.py
parsing/: compile_parser.py  parsers.py  print.py
scripts/: art.py  calculate_similarity.py  classify.py  classify_project.py  compile_parser.py  download.py  download_repos.py  extract_raw.py  extract_to_csv.py  exts.py  foo.py  generate_frequency_distr.py  lang.py  prepare_training_file.py  print.py  process_readmes.py  sample_csv.py  statistics.py  test_chatgpt.py  train_fasttext.py  utils.py
scripts/extract/: extract_all_to_csv.py  extract_functions.py  extract_grammar.py  extract_language.py  extract_names_for_training.py  extract_per_project.py  extract_projects.py  functions.py  grammar.py  load_grammars.py  sample_csv.py
scripts/fasttext/: benchmark.py  train.py
scripts/metrics/: basic.py  cc.py  concreteness.py  context_coverage.py  external_similarity.py  grammar.py  similarity.py  term_entropy.py  utils.py
scripts/models/: function.py
scripts/parsing/: compile.py  parsers.py  print.py
scripts/plot/: basic_metrics.py
scripts/plots/: plot_cosine.py
scripts/projects/: pick.py
scripts/training/: compute_correlations.py  (+5 more)
tests/: test_metrics.py  test_parsing.py
(+21 files in other folders)
