[tool.poetry]
name = "lang-parse"
version = "0.1.0"
description = ""
authors = ["Iwo Herka <iwo.herka@makimo.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygments = "^2.17.2"
pybind11 = "^2.11.1"
fasttext = {git = "https://github.com/cfculhane/fastText", rev = "main"}
requests = "^2.31.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
nltk = "^3.8.1"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"
pylibsrcml = "^1.0.0.post1"
esprima = "^4.0.1"
scipy = "^1.11.4"
tree-sitter = "^0.20.4"
pytest = "^7.4.4"
black = "^23.12.1"
python-lsp-server = {extras = ["all"], version = "^1.10.0"}
matplotlib = "^3.8.3"
openai = "^1.12.0"
autoflake = "^2.3.0"
isort = "^5.13.2"
pyenchant = "^3.2.2"
spacy = "^3.7.4"
typer = "^0.9.0"
rich = "^13.7.1"
python-levenshtein = "^0.25.0"
gensim = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
